--- a/client-app/src/app/home/equipo/equipo.component.html
+++ b/client-app/src/app/home/equipo/equipo.component.html
@@ -66,7 +66,7 @@
       <clr-dg-row *ngFor="let equipo of equipos" (click)="selectEquipo(equipo)"
                   [class.selectEquipo]="equipo === selectedEquipo">
         <clr-dg-cell>{{equipo.numeroSerie}}</clr-dg-cell>
-        <clr-dg-cell>{{equipo.tipoEquipo.nombreGenerico}}</clr-dg-cell>
+        <clr-dg-cell>{{equipo.tipoEquipo.tipo}}</clr-dg-cell>
         <clr-dg-cell>{{equipo.modeloEquipo.modelo}}</clr-dg-cell>
         <clr-dg-cell>{{equipo.contrato.numeroContrato}}</clr-dg-cell>
         <clr-dg-cell>{{equipo.representante.nombre}}</clr-dg-cell>
