--- a/client-app/src/app/home/equipo/equipo.component.html
+++ b/client-app/src/app/home/equipo/equipo.component.html
@@ -68,7 +68,7 @@
         <clr-dg-cell>{{equipo.numeroSerie}}</clr-dg-cell>
         <clr-dg-cell>{{equipo.tipoEquipo.tipo}}</clr-dg-cell>
         <clr-dg-cell>{{equipo.modeloEquipo.modelo}}</clr-dg-cell>
-        <clr-dg-cell>{{equipo.contrato.numeroContrato}}</clr-dg-cell>
+        <clr-dg-cell>{{equipo.contrato?.numeroContrato}}</clr-dg-cell>
         <clr-dg-cell>{{equipo.representante.nombre}}</clr-dg-cell>
         <clr-dg-cell>{{equipo.ubicacion.numeroSala}}</clr-dg-cell>
       </clr-dg-row>
