--- a/client-app/src/app/home/equipo/edit-equipo/edit-equipo.component.html
+++ b/client-app/src/app/home/equipo/edit-equipo/edit-equipo.component.html
@@ -277,8 +277,8 @@
 <app-representante *ngIf="modalAddEditRepreOpen"
                    [representante]="repreSeleccionado"
                    [isEditRepre]="isEditRepre"
-                   (representanteToUpdate)="addEditRepresentante($event)"
-                   (cancelAddEditRepre)="onCancelAddEditRepresentante($event)">
+                   (representanteToUpdate)="closeRepresentanteModal($event)"
+                   (cancelAddEditRepre)="closeRepresentanteModal($event)">
 </app-representante>
 
 
@@ -286,8 +286,8 @@
 <app-tipo-equipo *ngIf="modalAddEditTipoOpen"
                  [tipoEquipo]="tipoSeleccionado"
                  [isEditTipo]="isEditRepre"
-                 (tipoEquipoToUpdate)="addEditTipoEquipo($event)"
-                 (cancelAddEditTipo)="onCancelAddEditTipoEquipo($event)">
+                 (tipoEquipoToUpdate)="closeTipoEquipoModal($event)"
+                 (cancelAddEditTipo)="closeTipoEquipoModal($event)">
 </app-tipo-equipo>
 
 
@@ -295,14 +295,14 @@
 <app-modelo-equipo *ngIf="modalAddEditModeloOpen"
                    [modeloEquipo]="modeloSeleccionado"
                    [isEditModelo]="isEditRepre"
-                   (modeloEquipoToUpdate)="addEditModeloEquipo($event)"
-                   (cancelAddEditModelo)="onCancelAddEditModeloEquipo($event)">
+                   (modeloEquipoToUpdate)="closeModeloEquipoModal($event)"
+                   (cancelAddEditModelo)="closeModeloEquipoModal($event)">
 </app-modelo-equipo>
 
 <!--Modal para agregar o editar los datos de la ubicación del equipo -->
 <app-ubicacion *ngIf="modalAddEditUbiOpen"
                [ubicacion]="ubicacionSeleccionada"
                [isEditUbicacion]="isEditUbicacion"
-               (ubicacionToUpdate)="addEditUbicaion($event)"
-               (cancelAddEditUbicacion)="onCancelAddEditUbicacion($event)">
+               (ubicacionToUpdate)="closeUbicaionModal($event)"
+               (cancelAddEditUbicacion)="closeUbicaionModal($event)">
 </app-ubicacion>
