--- a/client-app/src/app/home/equipo/lista-equipo/lista-equipo.component.html
+++ b/client-app/src/app/home/equipo/lista-equipo/lista-equipo.component.html
@@ -37,29 +37,97 @@
   <br>
   <clr-datagrid [clrDgLoading]="loading">
     <clr-dg-action-bar>
-      <div class="clr-row clr-col-12">
-        <div class="clr-col-12">
-          <div class="clr-form-control clr-row">
-            <label for="nroSerie" class="clr-control-label clr-col-auto">Nro. Serie:</label>
-            <div class="clr-control-container clr-col-12 clr-col-md-2">
-              <div class="clr-input-wrapper">
-                <input id="nroSerie" class="clr-input"
-                       name="nroContrato" [(ngModel)]="numeroSerie">
-              </div>
+      <div class="clr-row clr-justify-content-start clr-col-12">
+        <div class="clr-col-4">
+          <div class="form-group row flex-items-xs-center">
+            <div class="col-3">
+              <label class="form-filter-label">Tipo:</label>
             </div>
-            <label for="nroPatrimonial" class="clr-control-label clr-col-auto">Nro. Patrimonial:</label>
-            <div class="clr-control-container clr-col-12 clr-col-md-2">
-              <div class="clr-input-wrapper">
-                <input id="nroPatrimonial" class="clr-input"
-                       name="nroContrato" [(ngModel)]="numeroPatrimonial">
+            <div class="col-4">
+              <div class="select form-control">
+                <select class="select-form-equipo" id="selectTipo" #selectedTipo name="selectTipo"
+                        [(ngModel)]="tipoId">
+                  <option>Filtrar por Tipo</option>
+                  <option *ngFor="let tipo of tipos"
+                          value={{tipo.id}}>{{tipo.tipo}}
+                  </option>
+                </select>
               </div>
-            </div>
-            <div class="clr-control-container clr-col-12 clr-col-md-2">
-              <a class="btn btn-sm btn-primary" (click)="filtrarEquipo()">
-                <clr-icon shape="search"></clr-icon>
-              </a>
             </div>
           </div>
+          <div class="form-group row flex-items-xs-center">
+            <div class="col-3">
+              <label class="form-filter-label">Marca/Modelo:</label>
+            </div>
+            <div class="col-4">
+              <div class="select form-control">
+                <select class="select-form-equipo" id="selectModelo" #selectedModelo
+                        name="selectModelo" [(ngModel)]="modeloId">
+                  <option>Filtrar por Marca/Modelo</option>
+                  <option *ngFor="let modelo of modelos"
+                          value={{modelo.id}}>{{modelo.marca}}/{{modelo.modelo}}
+                  </option>
+                </select>
+              </div>
+            </div>
+          </div>
+          <div class="form-group row flex-items-xs-center">
+            <div class="col-2">
+              <label class="form-filter-label">Ubicación:</label>
+            </div>
+            <div class="col-4">
+              <div class="select form-control">
+                <select class="select-form-equipo" id="selectUbi" #selectedUbi name="selectUbi"
+                        [(ngModel)]="ubicacionId">
+                  <option>Filtrar por Ubicacion</option>
+                  <option *ngFor="let ubicacion of ubicaciones"
+                          value={{ubicacion.id}}>{{ubicacion.servicio}}
+                  </option>
+                </select>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="clr-col-5">
+          <div class="form-group row flex-items-xs-center">
+            <div class="col-3">
+              <label class="form-filter-label">Estado Equipo:</label>
+            </div>
+            <div class="col-4">
+              <div class="select form-control">
+                <select class="select-form-equipo" id="estadoEquipo" #selectedEstadoEquipo
+                        name="estadoEquipo" [(ngModel)]="estadoEquipo"
+                        (change)="onSelectedEstado(selectedEstadoEquipo.value)">
+                  <option disabled>Filtrar por Estado Equipo</option>
+                  <option>Operativo</option>
+                  <option>Inoperativo</option>
+                  <option>Irreparable</option>
+                </select>
+              </div>
+            </div>
+          </div>
+          <div class="form-group row flex-items-xs-center">
+            <div class="col-4">
+              <label class="form-filter-label">Estado Contrato:</label>
+            </div>
+            <div class="col-4">
+              <div class="select form-control">
+                <select class="select-form-equipo" id="estadoContrato" #selectEstadoContrato name="estadoContrato"
+                        [(ngModel)]="estadoContrato"
+                        (change)="onSelectedEstadoContrado(selectEstadoContrato.value)">
+                  <option>Filtrar por Estado Contrato</option>
+                  <option *ngFor="let estado of estadosContrato"
+                          value={{estado.nombre}}>{{estado.nombre}}
+                  </option>
+                </select>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="clr-col-2">
+          <a class="btn btn-sm btn-primary" (click)="filtrarEquipo()">
+            <clr-icon shape="search"></clr-icon>
+          </a>
         </div>
         <div class="clr-col-12">
           <div class="clr-form-control clr-row">
@@ -78,25 +146,26 @@
         </div>
       </div>
     </clr-dg-action-bar>
-    <clr-dg-column [clrDgSortBy]="'numeroSerie'">Nro. Serie</clr-dg-column>
-    <clr-dg-column [clrDgSortBy]="'numeroPatrimonial'">Nro. Patrimonial</clr-dg-column>
-    <clr-dg-column>Descripción</clr-dg-column>
-    <clr-dg-column>Tipo</clr-dg-column>
-    <clr-dg-column>Modelo</clr-dg-column>
-    <clr-dg-column>Contrato</clr-dg-column>
-    <clr-dg-column>Representante</clr-dg-column>
-    <clr-dg-column>Ubicación</clr-dg-column>
+    <clr-dg-column class="table-header">Tipo</clr-dg-column>
+    <clr-dg-column class="table-header">Marca</clr-dg-column>
+    <clr-dg-column class="table-header">Modelo</clr-dg-column>
+    <clr-dg-column class="table-header">Nro. Serie</clr-dg-column>
+    <clr-dg-column class="table-header">Nro. Patrimonial</clr-dg-column>
+    <clr-dg-column class="table-header">Ubicación</clr-dg-column>
+    <clr-dg-column class="table-header">Estado del Equipo</clr-dg-column>
+    <clr-dg-column class="table-header">Estado del Contrato</clr-dg-column>
 
     <clr-dg-row *ngFor="let equipo of equipos" (click)="selectEquipo(equipo)"
                 [class.selectEquipo]="equipo === selectedEquipo">
-      <clr-dg-cell>{{equipo.numeroSerie}}</clr-dg-cell>
-      <clr-dg-cell>{{equipo.numeroPatrimonial}}</clr-dg-cell>
-      <clr-dg-cell>{{equipo.descripcionEquipo}}</clr-dg-cell>
-      <clr-dg-cell>{{equipo.tipoEquipo?.tipo}}</clr-dg-cell>
-      <clr-dg-cell>{{equipo.modeloEquipo?.modelo}}</clr-dg-cell>
-      <clr-dg-cell>{{equipo.contrato?.numeroContrato}}</clr-dg-cell>
-      <clr-dg-cell>{{equipo.representante?.nombre}}</clr-dg-cell>
-      <clr-dg-cell>{{equipo.ubicacion?.numeroSala}}</clr-dg-cell>
+      <clr-dg-cell class="table-column">{{equipo.tipoEquipo?.tipo}}</clr-dg-cell>
+      <clr-dg-cell class="table-column">{{equipo.modeloEquipo?.marca}}</clr-dg-cell>
+      <clr-dg-cell class="table-column">{{equipo.modeloEquipo?.modelo}}</clr-dg-cell>
+      <clr-dg-cell class="table-column">{{equipo.numeroSerie}}</clr-dg-cell>
+      <clr-dg-cell class="table-column">{{equipo.numeroPatrimonial}}</clr-dg-cell>
+      <clr-dg-cell class="table-column">{{equipo.ubicacion?.bloque}},
+        {{equipo.ubicacion?.numeroSala}}, {{equipo.ubicacion?.nivel}}</clr-dg-cell>
+      <clr-dg-cell class="table-column">{{equipo.estado}}</clr-dg-cell>
+      <clr-dg-cell class="table-column">{{equipo.contrato?.estadoContrato}}</clr-dg-cell>
     </clr-dg-row>
 
     <clr-dg-footer>
